# webserver

./: BUILD.md  CMakeLists.txt  README.md  README_COMPLETE.md  RESUME.md  TESTING.md  build.bat  build.ps1  build.sh  build_msvc.bat  env_setup.ps1  quick_test.sh  run_tests.sh  setup_env.bat  test_compile.cpp  test_compiler.bat
benchmarks/: CMakeLists.txt  generator_bench.cpp  memory_bench.cpp  storage_bench.cpp  task_bench.cpp  webbench.cpp  webbench_test.py
docs/: api_reference.md  architecture.md  coroutine_guide.md  interview_qa.md  interview_questions.md  resume_summary.md
examples/: CMakeLists.txt  echo_server.cpp  full_server_demo.cpp  generator_demo.cpp  http_server_demo.cpp  logger_demo.cpp  memory_pool_demo.cpp  simple_pool_demo.cpp  storage_demo.cpp  sync_primitives_demo.cpp  task_demo.cpp  thread_pool_demo.cpp
include/coro/: coro.hpp
include/coro/core/: generator.hpp  task.hpp
include/coro/io/: tcp.hpp
include/coro/memory/: coroutine_allocator.hpp  object_pool.hpp  pool_allocator.hpp
include/coro/net/http/: request.hpp  response.hpp  server.hpp
include/coro/scheduler/: scheduler.hpp  thread_pool.hpp  work_steal_queue.hpp
include/coro/sync/: channel.hpp  mutex.hpp  semaphore.hpp
include/webserver/net/ftp/: ftp_server.hpp
include/webserver/net/http/: static_file_handler.hpp
include/webserver/storage/: storage_engine.hpp
include/webserver/utils/: logger.hpp  lru_cache.hpp
src/: scheduler.cpp  thread_pool.cpp
src/net/ftp/: ftp_server.cpp
src/net/http/: static_file_handler.cpp
src/storage/: storage_engine.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt  run_tests.cpp  test_ftp_server.cpp  test_generator.cpp  test_logger.cpp  test_lru_cache.cpp  test_scheduler.cpp  test_static_file_handler.cpp  test_storage_engine.cpp  test_task.cpp
